# paccal

./: CMakeLists.txt  CMakePresets.json  README.md
grammar/: pascal.ebnf
report/: day-01.md  day-02.md
src/: CMakeLists.txt  compiler.cpp  compiler.hpp  lexer.cpp  lexer.hpp  paccal.cpp  parser.cpp  parser.hpp  symbol-table.hpp
tests/: CMakeLists.txt  test.cpp
